just some updates

--- a/imports/client/views/docs/docs.html
+++ b/imports/client/views/docs/docs.html
@@ -381,6 +381,9 @@ $ meteor --settings settings/prod.json
     <p>
         You can contact me by writing an e-mail to: <strong>julian.cwirko@gmail.com</strong> or you can write to me on <a href="https://twitter.com/JulianCwirko">Twitter</a>.
     </p>
+    <p>
+        Check out psd2Meteor -> <a href="http://www.psd2meteor.com">www.psd2meteor.com</a>
+    </p>
 </template>
 
 <template name="docsPagination">
