--- a/imports/client/views/main/main.html
+++ b/imports/client/views/main/main.html
@@ -60,6 +60,7 @@
             </div>
             <div class="footer-big-right">
                 <div>Built with <a href="https://www.meteor.com">Meteor</a> by <a href="http://julian.io">julian.io</a></div>
+                <div><a href="http://www.psd2meteor.com">Meteor apps development</a>!</div>
                 <div><a href="/docs#support" class="js-docs-link">Support/Contact</a></div>
             </div>
         </div>
